# trabalho-aed-2

./: CMakeLists.txt  main.c
arquivo/: arquivo.c  arquivo.h
arvore/: arvore.c  arvore.h
interface/: interface.c  interface.h
livro/: livro.c  livro.h
